--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Gill <kyle.robert.gill@gmail.com>",
   "dependencies": {
-    "gatsby": "^2.1.37",
+    "gatsby": "^2.32.13",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-analytics": "^2.0.17",
     "gatsby-plugin-react-helmet": "^3.0.10",
@@ -13,8 +13,11 @@
     "gatsby-plugin-sitemap": "^2.0.10",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-transformer-sharp": "^2.1.17",
+    "package-lock": "^1.0.5",
     "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.15.2",
     "react": "^16.8.4",
+    "react-admin": "^3.15.2",
     "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "sharp": "^0.22.0"
