--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gatsby": "^2.32.13",
     "gatsby-image": "^2.0.34",
     "gatsby-plugin-google-analytics": "^2.0.17",
+    "gatsby-plugin-offline": "2.2.9",
     "gatsby-plugin-react-helmet": "^3.0.10",
     "gatsby-plugin-sharp": "^2.0.29",
     "gatsby-plugin-sitemap": "^2.0.10",
